--- a/users-api/pom.xml
+++ b/users-api/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper.extensions</groupId>
+            <artifactId>modelmapper-spring</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
