--- a/users-api/pom.xml
+++ b/users-api/pom.xml
@@ -43,8 +43,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-crypto</artifactId>
-            <version>5.5.0</version>
+            <artifactId>spring-security-test</artifactId>
+            <version>5.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.modelmapper.extensions</groupId>
