--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -16,6 +16,15 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#spring.mail.username=
+#spring.mail.password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 spring.application.name=user-service
 
 jwt.secret=testSecret
+user-portal-url=http://localhost:4200
