Added checks for admin registration

--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.application.name=user-service
 
 jwt.secret=testSecret
 user-portal-url=http://localhost:4200
+admin-portal-url=http://localhost:3000
