--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
         </activation>
         <properties>
           <sonar.host.url>https://sonarcloud.io/</sonar.host.url>
-          <sonar.organization>your_origination</sonar.organization>
-          <sonar.login>your_security_token</sonar.login>
+          <sonar.organization>qqd</sonar.organization>
+          <sonar.login>8179de284b930721807fce40ac4631f5da6ab6dd</sonar.login>
         </properties>
     </profile>
     </profiles>
