--- a/pom.xml
+++ b/pom.xml
@@ -9,32 +9,34 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-<profile>
-  <id>coverage</id>
-  <build>
-   <plugins>
-    <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.8.4</version>
-    <executions>
-      <execution>
-        <id>prepare-agent</id>
-        <goals>
-         <goal>prepare-agent</goal>
-        </goals>
-      </execution>
-      <execution>
-        <id>report</id>
-        <goals>
-         <goal>report</goal>
-        </goals>
-      </execution>
-    </executions>
-    </plugin>
-   </plugins>
-  </build>
-</profile>
+    <profiles>
+        <profile>
+        <id>coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                            <artifactId>jacoco-maven-plugin</artifactId>
+                                <version>0.8.4</version>
+                                    <executions>
+                                        <execution>
+                                            <id>prepare-agent</id>
+                                                <goals>
+                                                    <goal>prepare-agent</goal>
+                                                </goals>
+                                        </execution>
+                                        <execution>
+                                            <id>report</id>
+                                                <goals>
+                                                    <goal>report</goal>
+                                                </goals>
+                                        </execution>
+                                    </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
