pom adjust attempt1

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+<build>
+   <pluginManagement>
+     <plugins>
+       <plugin>
+         <groupId>org.jacoco</groupId>
+         <artifactId>jacoco-maven-plugin</artifactId>
+         <version>0.7.9</version>
+       </plugin>
+     <plugins>
+   <pluginManagement>
+<build>
+
+
     <groupId>com.smoothstack</groupId>
     <artifactId>UserService</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -14,39 +27,6 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-        <plugins>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <configuration>
-                    <skip>${maven.test.skip}</skip>
-                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
-                    <output>file</output>
-                    <append>true</append>
-                    <excludes>
-                        <exclude>*MethodAccess</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>jacoco-initialize</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <phase>test-compile</phase>
-                    </execution>
-                    <execution>
-                    <id>jacoco-site</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     <modules>
         <module>ORM-Library</module>
         <module>users-api</module>
