--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
- <plugin>
+    <build>
+    <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.2</version>
@@ -24,7 +25,7 @@
             </execution>
         </executions>
     </plugin>
-
+    </build>
 
     <groupId>com.smoothstack</groupId>
     <artifactId>UserService</artifactId>
