--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <build>
+    <plugins>
     <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -25,6 +26,7 @@
             </execution>
         </executions>
     </plugin>
+    </plugins>
     </build>
 
     <groupId>com.smoothstack</groupId>
