--- a/users-api/src/test/resources/application.properties
+++ b/users-api/src/test/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql=true
 jwt.secret="secret"
 user-portal-url=http://localhost:4200
 admin-portal-url=http://localhost:3000
+
+
+email.region=us-west-1
+email.sender=scrumptiousdoctor@gmail.com
