finished create driver backend

--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 spring.application.name=user-service
-jwt.secret=testSecret
+jwt.secret=secret
 user-portal-url=http://localhost:4200
 email.region=us-east-2
 admin-portal-url=http://localhost:3000
