--- a/userService.template
+++ b/userService.template
@@ -113,3 +113,18 @@ Resources:
           Subnets:
             - Fn::ImportValue: !Sub "${BaseStackName}-PrivateSubnet1"
             - Fn::ImportValue: !Sub "${BaseStackName}-PrivateSubnet2"
+  ListenerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties:
+      Actions:
+        - Type: forward
+          TargetGroupArn:
+            Fn::ImportValue: !Sub "${BaseStackName}-UserTGArn"
+      Conditions:
+        - Field: path-pattern
+          PathPatternConfig:
+            Values:
+              - /accounts/*
+      Priority: 4
+      ListenerArn:
+        Fn::ImportValue: !Sub "${BaseStackName}-LBListenerARN"
