--- a/userService.template
+++ b/userService.template
@@ -3,8 +3,6 @@ Description: "user service template for use with jenkins"
 Parameters:
   ImageURL:
     Type: String
-  BaseStackName:
-    Type: String
 
 Resources:
   UserServiceLogGroup:
@@ -66,19 +64,24 @@ Resources:
               Protocol: tcp
           Environment:
             - Name: SPRING_APPLICATION_JSON
-              Value: !Join
-                - ""
-                - - '{"spring":{"datasource":{"url":"jdbc:postgresql://'
-                  - Fn::ImportValue: !Sub "${BaseStackName}-DBEndpoint"
-                  - ":"
-                  - Fn::ImportValue: !Sub "${BaseStackName}-DBPort"
-                  - "/"
-                  - Fn::ImportValue: !Sub "${BaseStackName}-DBName"
-                  - '","username":"'
-                  - "{{resolve:secretsmanager:DBUsername}}"
-                  - '","password":"'
-                  - "{{resolve:secretsmanager:DBPassword}}"
-                  - '"}},"jwt":{"secret":"SECRET"},"server":{"port":"8080"},"admin-portal-url": "https://admin.drscrumptious.com", "user-portal-url": "https://www.drscrumptious.com"}'
+              Value: >
+                {
+                  "spring":{
+                      "datasource":{
+                        "url":"jdbc:postgresql://{{resolve:secretsmanager:DBEndpoint}}:{{resolve:secretsmanager:DBPort}}/{{resolve:secretsmanager:DBName}}",
+                        "username":"{{resolve:secretsmanager:DBUsername}}",
+                        "password":"{{resolve:secretsmanager:DBPassword}}"
+                      }
+                  },
+                  "jwt":{
+                      "secret":"SECRET"
+                  },
+                  "server":{
+                      "port":"8080"
+                  },
+                  "admin-portal-url":"https://admin.drscrumptious.com",
+                  "user-portal-url":"https://www.drscrumptious.com"
+                }
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -95,36 +98,32 @@ Resources:
   ServiceDefinition:
     Type: AWS::ECS::Service
     Properties:
-      Cluster:
-        Fn::ImportValue: !Sub "${BaseStackName}-ECSClusterName"
+      Cluster: "{{resolve:secretsmanager:ECSClusterName}}"
       LaunchType: FARGATE
       DesiredCount: 1
       ServiceName: UserService
       LoadBalancers:
         - ContainerName: UserDefinition
           ContainerPort: 8080
-          TargetGroupArn:
-            Fn::ImportValue: !Sub "${BaseStackName}-UserTGArn"
+          TargetGroupArn: "{{resolve:secretsmanager:UserTGArn}}"
       TaskDefinition: !Ref TaskDefinition
       NetworkConfiguration:
         AwsvpcConfiguration:
           SecurityGroups:
-            - Fn::ImportValue: !Sub "${BaseStackName}-ServiceSecurityGroup"
+            - "{{resolve:secretsmanager:ServiceSecurityGroup}}"
           Subnets:
-            - Fn::ImportValue: !Sub "${BaseStackName}-PrivateSubnet1"
-            - Fn::ImportValue: !Sub "${BaseStackName}-PrivateSubnet2"
+            - "{{resolve:secretsmanager:PrivateSubnet1}}"
+            - "{{resolve:secretsmanager:PrivateSubnet2}}"
   ListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
       Actions:
         - Type: forward
-          TargetGroupArn:
-            Fn::ImportValue: !Sub "${BaseStackName}-UserTGArn"
+          TargetGroupArn: "{{resolve:secretsmanager:UserTGArn}}"
       Conditions:
         - Field: path-pattern
           PathPatternConfig:
             Values:
               - /accounts/*
       Priority: 4
-      ListenerArn:
-        Fn::ImportValue: !Sub "${BaseStackName}-LBListenerARN"
+      ListenerArn: "{{resolve:secretsmanager:LBListenerARN}}"
