--- a/userService.template
+++ b/userService.template
@@ -3,6 +3,13 @@ Description: "user service template for use with jenkins"
 Parameters:
   ImageURL:
     Type: String
+  Environment:
+    Type: String
+    Default: prod
+    AllowedValues:
+      - "prod"
+      - "dev"
+      - "test"
 
 Resources:
   UserServiceLogGroup:
@@ -64,13 +71,13 @@ Resources:
               Protocol: tcp
           Environment:
             - Name: SPRING_APPLICATION_JSON
-              Value: >
+              Value: !Sub >
                 {
                   "spring":{
                       "datasource":{
-                        "url":"jdbc:postgresql://{{resolve:secretsmanager:DBEndpoint}}:{{resolve:secretsmanager:DBPort}}/{{resolve:secretsmanager:DBName}}",
-                        "username":"{{resolve:secretsmanager:DBUsername}}",
-                        "password":"{{resolve:secretsmanager:DBPassword}}"
+                        "url":"jdbc:postgresql://{{resolve:secretsmanager:DBEndpoint-${Environment}}}:{{resolve:secretsmanager:DBPort-${Environment}}}/{{resolve:secretsmanager:DBName-${Environment}}}",
+                        "username":"{{resolve:secretsmanager:DBUsername-${Environment}}}",
+                        "password":"{{resolve:secretsmanager:DBPassword-${Environment}}}"
                       }
                   },
                   "jwt":{
@@ -98,32 +105,32 @@ Resources:
   ServiceDefinition:
     Type: AWS::ECS::Service
     Properties:
-      Cluster: "{{resolve:secretsmanager:ECSClusterName}}"
+      Cluster: !Sub "{{resolve:secretsmanager:ECSClusterName-${Environment}}}"
       LaunchType: FARGATE
       DesiredCount: 1
       ServiceName: UserService
       LoadBalancers:
         - ContainerName: UserDefinition
           ContainerPort: 8080
-          TargetGroupArn: "{{resolve:secretsmanager:UserTGArn}}"
+          TargetGroupArn: !Sub "{{resolve:secretsmanager:UserTGArn-${Environment}}}"
       TaskDefinition: !Ref TaskDefinition
       NetworkConfiguration:
         AwsvpcConfiguration:
           SecurityGroups:
-            - "{{resolve:secretsmanager:ServiceSecurityGroup}}"
+            - !Sub "{{resolve:secretsmanager:ServiceSecurityGroup-${Environment}}}"
           Subnets:
-            - "{{resolve:secretsmanager:PrivateSubnet1}}"
-            - "{{resolve:secretsmanager:PrivateSubnet2}}"
+            - !Sub "{{resolve:secretsmanager:PrivateSubnet1-${Environment}}}"
+            - !Sub "{{resolve:secretsmanager:PrivateSubnet2-${Environment}}}"
   ListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
       Actions:
         - Type: forward
-          TargetGroupArn: "{{resolve:secretsmanager:UserTGArn}}"
+          TargetGroupArn: !Sub "{{resolve:secretsmanager:UserTGArn-${Environment}}}"
       Conditions:
         - Field: path-pattern
           PathPatternConfig:
             Values:
               - /accounts/*
       Priority: 4
-      ListenerArn: "{{resolve:secretsmanager:LBListenerARN}}"
+      ListenerArn: !Sub "{{resolve:secretsmanager:LBListenerARN-${Environment}}}"
