changed jwt.secret to an actual secret

--- a/userService.template
+++ b/userService.template
@@ -81,7 +81,7 @@ Resources:
                       }
                   },
                   "jwt":{
-                      "secret":"SECRET"
+                      "secret":"{{resolve:secretsmanager:JwtSecret-${Environment}}}"
                   },
                   "server":{
                       "port":"8080"
