added checkstyle configuration

--- a/users-api/pom.xml
+++ b/users-api/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ss</groupId>
@@ -35,6 +35,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.4</version>
+                <configuration>
+                    <excludes>
+                        <exclude>com.ss.user.errors</exclude>
+                        <exclude>com.ss.user.model</exclude>
+                        <exclude>com.ss.user.repo</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
