changed log group name and stack name

--- a/userService.template
+++ b/userService.template
@@ -16,7 +16,7 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       RetentionInDays: 3
-      LogGroupName: UserServiceGroup
+      LogGroupName: !Sub "UserServiceGroup-${Environment}"
   TaskRole:
     Type: AWS::IAM::Role
     Properties:
