password reset working

--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -19,4 +19,6 @@ jwt.secret=secret
 user-portal-url=http://localhost:4200
 email.region=us-east-2
 admin-portal-url=http://localhost:3000
+driver-portal-url=http://localhost:3000
 email.sender=scrumptiousdoctor@gmail.com
+email.templates.password-reset=reset-password
