--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#if you'd rather use h2
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
+
+cloud.aws.region.auto=true
+cloud.aws.stack.auto=true
+management.metrics.export.cloudwatch.batch-size=20
+management.metrics.export.cloudwatch.namespace=user-service
+management.metrics.export.cloudwatch.enabled=false
+#false for local environments
+
 spring.application.name=user-service
 jwt.secret=secret
 user-portal-url=http://localhost:4200
