--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-cloud.aws.region.auto=true
-cloud.aws.stack.auto=true
+cloud.aws.region.auto=false
+cloud.aws.stack.auto=false
+cloud.aws.region.static=us-east-1
 management.metrics.export.cloudwatch.batch-size=20
 management.metrics.export.cloudwatch.namespace=user-service
 management.metrics.export.cloudwatch.enabled=false
