--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -7,11 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-cloud.aws.region.auto=false
-cloud.aws.stack.auto=false
-management.metrics.export.cloudwatch.batch-size=20
-management.metrics.export.cloudwatch.namespace=user-service
-management.metrics.export.cloudwatch.enabled=false
+metrics.cloudwatch.namespace="test"
+metrics.cloudwatch.enabled=false
 #false for local environments
 
 spring.application.name=user-service
