--- a/users-api/src/test/resources/application.properties
+++ b/users-api/src/test/resources/application.properties
@@ -12,6 +12,5 @@ driver-portal-url=http://localhost:3000
 email.region=us-west-1
 email.sender=scrumptiousdoctor@gmail.com
 email.templates.password-reset=reset-password
-cloud.aws.region.static=us-east-1
-cloud.aws.region.auto=false
-cloud.aws.stack.auto=false
+metrics.cloudwatch.namespace="test"
+metrics.cloudwatch.enabled=false
