--- a/users-api/pom.xml
+++ b/users-api/pom.xml
@@ -64,12 +64,12 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-cloudwatch2</artifactId>
-            <version>1.7.5</version>
+            <version>1.8.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>2.5.6</version>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>1.7.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
