added micrometer configuration and metrics to authentication controller

--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-metrics.cloudwatch.namespace="test"
+metrics.cloudwatch.namespace=test
 metrics.cloudwatch.enabled=false
+metrics.cloudwatch.region=us-east-1
 #false for local environments
 
 spring.application.name=user-service
