--- a/users-api/src/test/resources/application.properties
+++ b/users-api/src/test/resources/application.properties
@@ -12,5 +12,7 @@ driver-portal-url=http://localhost:3000
 email.region=us-west-1
 email.sender=scrumptiousdoctor@gmail.com
 email.templates.password-reset=reset-password
-metrics.cloudwatch.namespace="test"
+metrics.cloudwatch.namespace=test
 metrics.cloudwatch.enabled=false
+metrics.cloudwatch.region=us-east-1
+aws.region=us-east-1
